# air-screen-x-host

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
src/: app.cpp  app.hpp  main.cpp
src/config/: config.cpp  config.hpp
src/display/: dxgi_capture.cpp  dxgi_capture.hpp  vdd_manager.cpp  vdd_manager.hpp
src/encoder/: color_convert.hpp  encoder.hpp  encoder_factory.cpp  mf_encoder.cpp  mf_encoder.hpp
src/input/: input_injector.cpp  input_injector.hpp
src/network/: ctrl_protocol.hpp  ctrl_server.cpp  ctrl_server.hpp  input_receiver.cpp  input_receiver.hpp  lan.hpp  net_common.hpp  pairing.hpp  protocol.hpp  secure_token.cpp  secure_token.hpp  udp_server.cpp  udp_server.hpp
src/ui/: tray.cpp  tray.hpp
tests/: CMakeLists.txt  test_config.cpp  test_ctrl.cpp  test_protocol.cpp
